<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3545"
    tools:context="fall2018.csc2017.slidingtiles.SlidingTilesMenuActivity">

    <TextView
        android:id="@+id/GameText"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="153dp"
        android:gravity="center"
        android:text="@string/loadTitle"
        android:textColor="#ff3d3d"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/LoadButton1"
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="237dp"
        android:text="@string/loadOne" />

    <Button
        android:id="@+id/LoadButton2"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/loadTwo" />

    <Button
        android:id="@+id/LoadButton3"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="236dp"
        android:text="@string/loadThree" />

    <Button
        android:id="@+id/AutoLoadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="169dp"
        android:text="@string/loadFour" />

</RelativeLayout>