<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2c3545"
    tools:context="fall2018.csc2017.slidingtiles.SlidingTilesMenuActivity">

    <TextView
        android:id="@+id/GameText"
        android:layout_width="296dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="153dp"
        android:gravity="center"
        android:text="SAVE MENU"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="#71da2b"
        android:textSize="50sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/SaveButton1"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="237dp"
        android:text="@string/saveOne" />

    <Button
        android:id="@+id/SaveButton3"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="242dp"
        android:text="@string/saveThree" />

    <Button
        android:id="@+id/SaveButton2"
        android:layout_width="101dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/saveTwo" />

</RelativeLayout>